--- a/Week_08/mysql-db-sample/mysql-db-sample/pom.xml
+++ b/Week_08/mysql-db-sample/mysql-db-sample/pom.xml
@@ -18,9 +18,78 @@
 		<java.version>1.8</java.version>
 		<sharding-sphere.version>5.0.0-alpha</sharding-sphere.version>
 		<springfox.version>2.6.1</springfox.version>
+		<hmily.version>2.1.2-SNAPSHOT</hmily.version>
+		<curator.version>5.1.0</curator.version>
+		<dubbo.version>2.6.5</dubbo.version>
+		<zookeeper.version>3.6.0</zookeeper.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>${dubbo.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-client</artifactId>
+			<version>${curator.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>${curator.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>${zookeeper.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.dromara</groupId>
+			<artifactId>hmily-annotation</artifactId>
+			<version>${hmily.version}</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>org.dromara</groupId>
+			<artifactId>hmily-spring-boot-starter-dubbo</artifactId>
+			<version>${hmily.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-dependencies</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.shardingsphere/shardingsphere-jdbc-core -->
 		<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
