2）尝试将客户端动态代理改成ByteBuddy，添加异常处理 -- bytebuddy不能调通

--- a/Week_09/rpc01/rpcfx-core/pom.xml
+++ b/Week_09/rpc01/rpcfx-core/pom.xml
@@ -51,6 +51,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
