--- a/Week_09/rpc01/rpcfx-core/pom.xml
+++ b/Week_09/rpc01/rpcfx-core/pom.xml
@@ -55,6 +55,10 @@
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
