--- a/Week_08/easy-hmily-demo/easy-demo-dubbo-provider/src/main/resources/application.yml
+++ b/Week_08/easy-hmily-demo/easy-demo-dubbo-provider/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     username: root
     password:
 
+mybatis:
+  type-aliases-package: com.easy.hmily.entity
+  config-location: classpath:mybatis/mybatis-config.xml
+
 dubbo:
   scan:
     base-packages: com.easy.hmily.provider
@@ -32,3 +36,12 @@ dubbo:
     qos-port-compatible: 22222
     qos-accept-foreign-ip-compatible: true
     qos-host: localhost
+
+logging:
+  level:
+    root: error
+    org.springframework.web: info
+    org.apache.ibatis: debug
+    com.easy.hmily: debug
+    io.netty: info
+  path: "./logs"
