在Java中实现一个分布式计数器，模拟减库存。MallController对外提供服务，TestRequest.main方法测试。

--- a/Week_11/spring-boot-redis/src/main/resources/application.yml
+++ b/Week_11/spring-boot-redis/src/main/resources/application.yml
@@ -9,12 +9,12 @@ spring:
     host: 0.0.0.0
     port: 6379
     timeout: 5000
-#    lettuce:
-#      pool:
-#        max-active: 10
-#        max-wait: -1
-#        max-idle: 2
-#        min-idle: 1
+    lettuce:
+      pool:
+        max-active: 5
+        max-wait: -1
+        max-idle: 2
+        min-idle: 1
 
 logging:
   level:
