--- a/Week_11/spring-boot-redis/pom.xml
+++ b/Week_11/spring-boot-redis/pom.xml
@@ -36,6 +36,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.12.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
